--- a/css/main.css
+++ b/css/main.css
@@ -118,11 +118,11 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 400
 }
 ::-moz-selection {
-  background: hsl(321, 100%, 40%);
+  background: hsla(0, 0%, 0%, 0.4);
   text-shadow: none
 }
 ::selection {
-  background: hsl(321, 100%, 40%);
+  background: hsla(0, 0%, 0%, 0.4);
   text-shadow: none
 }
 .inverted::-moz-selection {
@@ -367,6 +367,10 @@ svg {
   box-sizing: border-box;
 }
 #navibuttons {
+  -webkit-user-select: none;  /* Chrome all / Safari all */
+  -moz-user-select: none;     /* Firefox all */
+  -ms-user-select: none;      /* IE 10+ */
+  user-select: none;
   opacity: 1;
   -webkit-box-align: flex-end;
   -webkit-align-items: flex-end;
@@ -403,6 +407,11 @@ svg {
   font-size: 0.62em;
   line-height: 1.1em;
   pointer-events: none;
+  -webkit-user-select: none;  /* Chrome all / Safari all */
+  -moz-user-select: none;     /* Firefox all */
+  -ms-user-select: none;      /* IE 10+ */
+  user-select: none;
+  cursor: default;
 }
 .counter > div {
   position: absolute;
