--- a/css/main.css
+++ b/css/main.css
@@ -338,8 +338,9 @@ div[fff="1"] {
   -webkit-transform: translate3d(0, 3em, 0);
   transform: translate3d(0, 3em, 0);
 }
-#lazyme {
-  width: 1.2em;
+#me svg {
+  width: 1.5em;
+  height: 1.5em;
   margin-right: 5px;
 }
 .furtherbehind {
